--- a/css-harem_hotel.css
+++ b/css-harem_hotel.css
@@ -3,7 +3,7 @@
     
 }
 body{
-    background-image: url(./img/PWFZNp.jpg);
+    background-image: url(PWFZNp.jpg);
     background-size: cover;
 }
 .tab_menu{
